# idatasec-license

./: CMakeLists.txt  Makefile  readme.md  unitTest.sh
Apps/: LicenseGenerationMain.c  Makefile
Apps/Executions/: Makefile
Headers/LicenseGenerationController/: LicenseMainCaller.h
Models/Commons/: Makefile
Models/Commons/Headers/: EncodeBase64.h  EncodePrototype.h  Time.h
Models/Commons/Sources/: CMakeLists.txt  EncodeBase64.c  EncodePrototype.c  Time.c
Models/Licenses/: Makefile
Models/Licenses/Headers/: License.h
Models/Licenses/Sources/: CMakeLists.txt  License.c
Outputs/: aes256Key.aes  content.info  license.key  license.key.pem  license.key.pub  license.lic
Settings/.Ini/: License.ini  globalCompiling.ini
Settings/.Json/: globalDependencies.json
Shells/: installVendor.sh
Sources/LicenseGenerationController/: CMakeLists.txt  LicenseMainCaller.c  Makefile
Sources/SizingController/: Makefile
Tests/: CMakeLists.txt
Tests/Headers/LicenseGenerationController/: Test_LicenseGenerationController.h
Tests/Models/: CMakeLists.txt
Tests/Models/Commons/Headers/: Test_EncodeBase64.h  Test_Time.h
Tests/Models/Commons/Sources/: CMakeLists.txt  Test_EncodeBase64.c  Test_Time.c
Tests/Models/Licenses/Headers/: Test_License.h
Tests/Models/Licenses/Sources/: CMakeLists.txt  Test_License.c
Tests/Sources/: CMakeLists.txt
Tests/Sources/LicenseGenerationController/: CMakeLists.txt  Test_LicenseMainCaller.c
